--- a/m4d/App_Code/SongHelper.cshtml
+++ b/m4d/App_Code/SongHelper.cshtml
@@ -14,7 +14,7 @@
 @helper AdvancedHeader(System.Web.Mvc.HtmlHelper html, SongFilter filter)
 {
     var url = "/song/" + (filter.IsRaw ? "raw" : "advanced") + "searchform?filter=" + filter;
-    <h1>Search Results @(filter.IsRaw ? "(RAW)" : filter.IsAzure ? "(BETA)" : string.Empty)</h1>
+    <h1>Search Results @(filter.IsRaw ? "(RAW)" : !filter.IsAzure ? "(Legacy)" : string.Empty)</h1>
     <div class="row">
         <div class="col-sm-6"><h4>@filter.Description</h4></div>
         <div class="col-sm-2 col-sm-offset-2">
@@ -35,14 +35,18 @@
 
         <div class="row">
             <h1 class="col-sm-2" style="width: auto; font-size: 22px;">
-                @if (isAzure)
+                @if (isAzure && SearchServiceInfo.UseSql)
                 {
-                    <text>Search (BETA)</text>
+                    <text>Simple Search (BETA)</text>
+                }
+                else if (!isAzure && !SearchServiceInfo.UseSql)
+                {
+                    <text>Search (Legacy)</text>
                 }
                 else
                 {
                     <text>Song Library</text>
-                }
+}
             </h1>
             <div class="col-sm-offset-2" style="margin-left: 1px">
                 <div class="input-group" style="margin-top: 1em">
@@ -104,7 +108,6 @@
             (@songs.TotalItemCount songs found.)
         </div>
         <div class="col-md-4 pagination-align">
-            @* ReSharper disable once Mvc.ControllerNotResolved *@
             @if (!danceQuery.All)
             {
                 foreach (var dance in danceQuery.Dances)
