--- a/m4d/Views/Admin/Diagnostics.cshtml
+++ b/m4d/Views/Admin/Diagnostics.cshtml
@@ -43,9 +43,11 @@
 <h3>Search Index: @ViewBag.SearchIdx</h3>
 <p>Source = @ViewBag.StatsUpdateSource, Time=@ViewBag.StatsUpdateTime</p>
 <ul>
-    <li>@Html.ActionLink("basica", "SetSearchIdx", "Admin", new { id = "basica" }, null)</li>
-    <li>@Html.ActionLink("basicb", "SetSearchIdx", "Admin", new { id = "basicb" }, null)</li>
+    <li>UseSql = @Html.ActionLink(SearchServiceInfo.UseSql.ToString(), "SetUseSql", "Admin", new { flag =  !SearchServiceInfo.UseSql }, null)</li>
+    <li>@Html.ActionLink("basica", "SetSearchIdx", "Admin", new {id = "basica"}, null)</li>
+    <li>@Html.ActionLink("basicb", "SetSearchIdx", "Admin", new {id = "basicb"}, null)</li>
     <li>@Html.ActionLink("basicc", "SetSearchIdx", "Admin", new {id = "basicc"}, null)</li>
+    <li>Enviroment: @SearchServiceInfo.RawEnvironment</li>
 </ul>
 
 
