--- a/m4d/Views/Dance/Details.cshtml
+++ b/m4d/Views/Dance/Details.cshtml
@@ -113,7 +113,7 @@
 {
     <section id="top-ten">
         <div>
-            <h3>@Html.ActionLink("music4dance's", "Index", "Home") top 10 songs for dancing @Html.ActionLink(@Model.DanceName, "index", "song", new {filter = @Model.DanceId}, null)</h3>
+            <h3>@Html.ActionLink("music4dance's", "Index", "Home") top 10 songs for dancing @Html.ActionLink(@Model.DanceName, "index", "song", new {filter = @danceFilter}, null)</h3>
         </div>
         <div>
             @{Html.RenderPartial("_ListSongs", @Model.TopSongs, ViewData);}
