Quick fix for wedding dance page

--- a/m4d/Views/Dance/weddingdancemusic.cshtml
+++ b/m4d/Views/Dance/weddingdancemusic.cshtml
@@ -22,7 +22,7 @@
         var column = columns[i];
 
         var tag = column + ":Other";
-        counts[i] = danceStats.AggregateSongTags.TagCount(tag);
+        counts[i] = danceStats.AggregateSongTags?.TagCount(tag) ?? 0;
         if (counts[i] != 0)
         {
             show = true;
