--- a/m4d/Views/Admin/UploadBackup.cshtml
+++ b/m4d/Views/Admin/UploadBackup.cshtml
@@ -110,8 +110,8 @@
 
     <h2>JSON Backup</h2>
     <li>@Html.ActionLink("Dance Statistics", "DanceStatistics")</li>
-    <li>@Html.ActionLink("From Sql", "DanceStatistics", new {soure="sql"}, null)</li>
-    <li>@Html.ActionLink("From Azure", "DanceStatistics", new { source = "default" }, null)</li>
+    <li>@Html.ActionLink("From Sql", "DanceStatistics", new {soure="sql", save = false }, null) (@Html.ActionLink("Save", "DanceStatistics", new { source = "sql", save=true }, null))</li>
+    <li>@Html.ActionLink("From Azure", "DanceStatistics", new { source = "default", save = false }, null) (@Html.ActionLink("Save", "DanceStatistics", new { source = "default", save = true }, null))</li>
 
 
     <h3>Backup Delta</h3>
