--- a/m4d/Views/Shared/_ListSongs.cshtml
+++ b/m4d/Views/Shared/_ListSongs.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DanceLibrary
-@model IEnumerable<SongBase>
+@model IEnumerable<Song>
 
 @{
     var isAdmin = User.IsInRole("dbAdmin");
@@ -51,7 +51,7 @@
     }
 }
 
-@helper Artist(SongBase song)
+@helper Artist(Song song)
 {
     if (!string.IsNullOrWhiteSpace(song.Artist))
     {
@@ -93,7 +93,7 @@
     }
 }
 
-@helper Tags(SongBase song, SongFilter filter)
+@helper Tags(Song song, SongFilter filter)
 {
     foreach (var titem in song.TagSummary.Tags.Where(t => !string.Equals(t.TagClass, "dance", StringComparison.OrdinalIgnoreCase)))
     {
@@ -101,7 +101,7 @@
     }
 }
 
-@helper TimeHelper(SongBase song, SongSort order)
+@helper TimeHelper(Song song, SongSort order)
 {
     var created = order.Id == "Created";
     var prefix = created ? "Created" : "Last modified";
@@ -114,7 +114,7 @@
     </td>
 }
 
-@helper LikeHelper(SongBase song, LikeDictionary likes, string img, string modifier, string danceId, string tipNull, string tipTrue, string tipFalse)
+@helper LikeHelper(Song song, LikeDictionary likes, string img, string modifier, string danceId, string tipNull, string tipTrue, string tipFalse)
 {
     bool? like;
     if (likes == null || !likes.TryGetValue(song.SongId, out like))
