DFKill: SongDetails -> Song

--- a/m4d/App_Code/UserHelper.cshtml
+++ b/m4d/App_Code/UserHelper.cshtml
@@ -2,7 +2,7 @@
 @using System.Web.Mvc.Html
 @using m4dModels
 
-@helper UndoUser(System.Web.Mvc.HtmlHelper html, SongDetails song, SongFilter filter, string userName=null)
+@helper UndoUser(System.Web.Mvc.HtmlHelper html, Song song, SongFilter filter, string userName=null)
 {
     var title = userName;
     var toggle = string.Empty;
